k8s/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-meetup-api
spec:
  progressDeadlineSeconds: 600
  replicas: 4
  selector:
    matchLabels:
      app.kubernetes.io/component: api
      app.kubernetes.io/name: k8s-meetup
  template:
    metadata:
      labels:
        app.kubernetes.io/component: api
        app.kubernetes.io/name: k8s-meetup
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: k8s-meetup-api
        image: api
        imagePullPolicy: Always
        name: api
        ports:
        - containerPort: 8080
          name: api
          protocol: TCP
        resources:
          requests:
            cpu: 25m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 250Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
