k8s/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: k8s-meetup-api
spec:
  ports:
  - name: api
    port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app.kubernetes.io/component: api
    app.kubernetes.io/name: k8s-meetup
  type: ClusterIP
